fixed small ads positioning on safari

--- a/css/main.css
+++ b/css/main.css
@@ -301,6 +301,7 @@ strong, .bold, b{
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     overflow: hidden;
     height: 100%;
+    vertical-align: middle;
 }
 .srp .scrollable-card{
     overflow: auto;
